Fix spacing for button in resources

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -268,20 +268,38 @@
 .resources {
     @extend .section;
 
-    .host > div > div {
+    .host  {
 
-        p:nth-of-type(1) {
-            font-size:24px;
-            font-weight:bold;
-            color: $darkblue;
+        > div:nth-of-type(1) {
+
+          div {
+
+            p:nth-of-type(1) {
+              font-size:24px;
+              font-weight:bold;
+              color: $darkblue;
+            }
+
+            p:nth-of-type(2) {
+              font-size:18px;
+              color: $darkblue;
+            }
+          }
+       }
+
+       > div:nth-of-type(2) {
+
+            margin-top: 64px;
+
+            a {
+                margin: 0px auto 0px auto;
+            }
+
         }
 
-        p:nth-of-type(2) {
-            font-size:18px;
-            color: $darkblue;
-
-        }
     }
+
+
 
 
 }
